--- a/blackline/index.html
+++ b/blackline/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:image" content="https://github.com/Jgar514/blacklinecontracting.com/blob/beta/blackline/src/assets/meta/og.png" />
 		<title>Blackline Contracting</title>
 	</head>
 	<body>
