--- a/blackline/index.html
+++ b/blackline/index.html
@@ -3,7 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<meta property="og:title" content="Blackline Contracting" />
+		<meta property="og:description" content="A mobile responsive business website for a general contracting company" />
 		<meta property="og:image" content="https://github.com/Jgar514/blacklinecontracting.com/blob/beta/blackline/src/assets/meta/og.png" />
+		<meta property="og:url" content="https://blackline.joshuagarvey.com/" />
+
 		<title>Blackline Contracting</title>
 	</head>
 	<body>
