changed the link to my og image

--- a/blackline/index.html
+++ b/blackline/index.html
@@ -6,7 +6,7 @@
 
 		<meta property="og:title" content="Blackline Contracting" />
 		<meta property="og:description" content="A mobile responsive business website for a general contracting company" />
-		<meta property="og:image" content="https://github.com/Jgar514/blacklinecontracting.com/blob/beta/blackline/public/og.png" />
+		<meta property="og:image" content="https://blackline.joshuagarvey.com/og.png" />
 		<meta property="og:url" content="https://blackline.joshuagarvey.com/" />
 
 		<title>Blackline Contracting</title>
