new og image with imgur link

--- a/blackline/index.html
+++ b/blackline/index.html
@@ -6,8 +6,9 @@
 
 		<meta property="og:title" content="Blackline Contracting" />
 		<meta property="og:description" content="A mobile responsive business website for a general contracting company" />
-		<meta property="og:image" content="https://blackline.joshuagarvey.com/og.png" />
+		<meta property="og:image" content="https://imgur.com/a/Hiz0GPk" />
 		<meta property="og:url" content="https://blackline.joshuagarvey.com/" />
+		<meta name="author" content="Joshua Garvey" />
 
 		<title>Blackline Contracting</title>
 	</head>
