fixing imur link

--- a/blackline/index.html
+++ b/blackline/index.html
@@ -6,7 +6,7 @@
 
 		<meta property="og:title" content="Blackline Contracting" />
 		<meta property="og:description" content="A mobile responsive business website for a general contracting company" />
-		<meta property="og:image" content="https://imgur.com/a/Hiz0GPk" />
+		<meta property="og:image" content="https://imgur.com/VwTxl8C" />
 		<meta property="og:url" content="https://blackline.joshuagarvey.com/" />
 		<meta name="author" content="Joshua Garvey" />
 
