new square favicon

--- a/blackline/index.html
+++ b/blackline/index.html
@@ -10,7 +10,7 @@
 		<meta property="og:url" content="https://blackline.joshuagarvey.com/" />
 		<meta name="author" content="Joshua Garvey" />
 
-		<link rel="icon" href="path/to/your/favicon.svg" type="image/svg+xml" />
+		<link rel="icon" href="/square.svg" type="image/svg+xml" />
 
 		<title>Blackline Contracting</title>
 	</head>
