edit typo in meta description

--- a/blackline/index.html
+++ b/blackline/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<meta property="og:title" content="Blackline Contracting" />
-		<meta property="og:description" content="A mobile responsive business website for a general contracting company> Service site with custom reusable UI components using Vite, React, and Tailwind CSS." />
+		<meta property="og:description" content="A mobile responsive business website for a general contracting company. Service site with custom reusable UI components using Vite, React, and Tailwind CSS." />
 		<meta name="image" property="og:image" content="https://i.imgur.com/VwTxl8C.png" />
 		<meta property="og:url" content="https://blackline.joshuagarvey.com/" />
 		<meta name="author" content="Joshua Garvey" />
